<resources>
    <string name="app_name">WeDigIt Assignment</string>
    <string name="splash_title">WeDigIt</string>
    <string name="splash_info">Assignment</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="userId">\@arlenecoy</string>
    <string name="segment">Segment</string>
    <string name="reply">Reply</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="edit">EDIT</string>
    <string name="userName">Arlene McCoy</string>
    <string name="user_bio">Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consectetur lorem</string>
    <string name="rating_value">9.9</string>
    <string name="play">Play</string>
    <string name="user_jam_s">User Jam\'s</string>
</resources>